2005-06-10  Miles Bader  <miles@gnu.org>

	* generic-x.el (show-tabs-tab, show-tabs-space):
	Remove "-face" suffix from face names.
	(show-tabs-tab-face, show-tabs-space-face):
	New backward-compatibility aliases for renamed faces.
	(show-tabs-generic-mode-font-lock-defaults-1)
	(show-tabs-generic-mode-font-lock-defaults-2):
	Use renamed show-tabs faces.

	* smerge-mode.el (smerge-mine, smerge-other, smerge-base)
	(smerge-markers): Remove "-face" suffix from face names.
	(smerge-mine-face, smerge-other-face, smerge-base-face)
	(smerge-markers-face): 
	New backward-compatibility aliases for renamed faces.
	(smerge-mine-face, smerge-other-face, smerge-base-face)
	(smerge-markers-face): Use renamed smerge faces.

	* log-view.el (log-view-file, log-view-message): 
	Remove "-face" suffix from face names.
	(log-view-file-face, log-view-message-face): 
	New backward-compatibility aliases for renamed faces.
	(log-view-file-face, log-view-message-face): Use renamed log-view faces.

	* paren.el (show-paren-match, show-paren-mismatch): 
	Remove "-face" suffix from face names.
	(show-paren-match-face, show-paren-mismatch-face): 
	New backward-compatibility aliases for renamed faces.
	(show-paren-function): Use renamed show-paren faces.

	* ruler-mode.el (ruler-mode-default, ruler-mode-pad)
	(ruler-mode-margins, ruler-mode-fringes)
	(ruler-mode-column-number, ruler-mode-fill-column)
	(ruler-mode-comment-column, ruler-mode-goal-column)
	(ruler-mode-tab-stop, ruler-mode-current-column): 
	Remove "-face" suffix from face names.
	(ruler-mode-default-face, ruler-mode-pad-face)
	(ruler-mode-margins-face, ruler-mode-fringes-face)
	(ruler-mode-column-number-face, ruler-mode-fill-column-face)
	(ruler-mode-comment-column-face, ruler-mode-goal-column-face)
	(ruler-mode-tab-stop-face, ruler-mode-current-column-face): 
	New backward-compatibility aliases for renamed faces.
	(ruler-mode-pad, ruler-mode-margins, ruler-mode-fringes)
	(ruler-mode-column-number, ruler-mode-fill-column)